src/Microsoft.Health.Fhir.MappingLanguage/antlr/FmlMappingParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from FmlMapping.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class FmlMappingParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, NULL_LITERAL=86, BOOL=87, 
		DATE=88, DATE_TIME=89, TIME=90, LONG_INTEGER=91, DECIMAL=92, INTEGER=93, 
		ID=94, IDENTIFIER=95, DELIMITED_IDENTIFIER=96, SINGLE_QUOTED_STRING=97, 
		DOUBLE_QUOTED_STRING=98, TRIPLE_QUOTED_STRING_LITERAL=99, WS=100, BLOCK_COMMENT=101, 
		METADATA_PREFIX=102, LINE_COMMENT=103;
	public const int
		RULE_structureMap = 0, RULE_conceptMapDeclaration = 1, RULE_conceptMapPrefix = 2, 
		RULE_conceptMapCodeMap = 3, RULE_conceptMapSource = 4, RULE_conceptMapTarget = 5, 
		RULE_code = 6, RULE_mapDeclaration = 7, RULE_metadataDeclaration = 8, 
		RULE_markdownLiteral = 9, RULE_url = 10, RULE_identifier = 11, RULE_structureDeclaration = 12, 
		RULE_constantDeclaration = 13, RULE_groupDeclaration = 14, RULE_parameters = 15, 
		RULE_parameter = 16, RULE_groupExpressions = 17, RULE_typeMode = 18, RULE_extends = 19, 
		RULE_typeIdentifier = 20, RULE_expression = 21, RULE_mapExpression = 22, 
		RULE_mapExpressionName = 23, RULE_mapExpressionSource = 24, RULE_mapExpressionTarget = 25, 
		RULE_sourceCardinality = 26, RULE_upperBound = 27, RULE_qualifiedIdentifier = 28, 
		RULE_sourceDefault = 29, RULE_alias = 30, RULE_whereClause = 31, RULE_checkClause = 32, 
		RULE_log = 33, RULE_dependentExpression = 34, RULE_importDeclaration = 35, 
		RULE_mapLineTarget = 36, RULE_transform = 37, RULE_invocation = 38, RULE_paramList = 39, 
		RULE_param = 40, RULE_fpExpression = 41, RULE_fpTerm = 42, RULE_fpInvocation = 43, 
		RULE_fpExternalConstant = 44, RULE_fpFunction = 45, RULE_fpParamList = 46, 
		RULE_fpTypeSpecifier = 47, RULE_constant = 48, RULE_literal = 49, RULE_fpQuantity = 50;
	public static readonly string[] ruleNames = {
		"structureMap", "conceptMapDeclaration", "conceptMapPrefix", "conceptMapCodeMap", 
		"conceptMapSource", "conceptMapTarget", "code", "mapDeclaration", "metadataDeclaration", 
		"markdownLiteral", "url", "identifier", "structureDeclaration", "constantDeclaration", 
		"groupDeclaration", "parameters", "parameter", "groupExpressions", "typeMode", 
		"extends", "typeIdentifier", "expression", "mapExpression", "mapExpressionName", 
		"mapExpressionSource", "mapExpressionTarget", "sourceCardinality", "upperBound", 
		"qualifiedIdentifier", "sourceDefault", "alias", "whereClause", "checkClause", 
		"log", "dependentExpression", "importDeclaration", "mapLineTarget", "transform", 
		"invocation", "paramList", "param", "fpExpression", "fpTerm", "fpInvocation", 
		"fpExternalConstant", "fpFunction", "fpParamList", "fpTypeSpecifier", 
		"constant", "literal", "fpQuantity"
	};

	private static readonly string[] _LiteralNames = {
		null, "'conceptmap'", "'{'", "'}'", "'prefix'", "'='", "'-'", "':'", "'map'", 
		"'uses'", "'alias'", "'as'", "'source'", "'queried'", "'target'", "'produced'", 
		"'let'", "';'", "'group'", "'('", "','", "')'", "'<<'", "'types'", "'type+'", 
		"'>>'", "'extends'", "'->'", "'first'", "'not_first'", "'last'", "'not_last'", 
		"'only_one'", "'..'", "'*'", "'imports'", "'where'", "'check'", "'div'", 
		"'contains'", "'.'", "'default'", "'log'", "'then'", "'share'", "'single'", 
		"'['", "']'", "'+'", "'/'", "'mod'", "'&'", "'is'", "'|'", "'<='", "'<'", 
		"'>'", "'>='", "'~'", "'!='", "'!~'", "'in'", "'and'", "'or'", "'xor'", 
		"'implies'", "'$this'", "'$index'", "'$total'", "'%'", "'year'", "'month'", 
		"'week'", "'day'", "'hour'", "'minute'", "'second'", "'millisecond'", 
		"'years'", "'months'", "'weeks'", "'days'", "'hours'", "'minutes'", "'seconds'", 
		"'milliseconds'", null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "'/// '"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "NULL_LITERAL", "BOOL", "DATE", "DATE_TIME", "TIME", "LONG_INTEGER", 
		"DECIMAL", "INTEGER", "ID", "IDENTIFIER", "DELIMITED_IDENTIFIER", "SINGLE_QUOTED_STRING", 
		"DOUBLE_QUOTED_STRING", "TRIPLE_QUOTED_STRING_LITERAL", "WS", "BLOCK_COMMENT", 
		"METADATA_PREFIX", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FmlMapping.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FmlMappingParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FmlMappingParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FmlMappingParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StructureMapContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FmlMappingParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MetadataDeclarationContext[] metadataDeclaration() {
			return GetRuleContexts<MetadataDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MetadataDeclarationContext metadataDeclaration(int i) {
			return GetRuleContext<MetadataDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapDeclarationContext[] conceptMapDeclaration() {
			return GetRuleContexts<ConceptMapDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapDeclarationContext conceptMapDeclaration(int i) {
			return GetRuleContext<ConceptMapDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MapDeclarationContext mapDeclaration() {
			return GetRuleContext<MapDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructureDeclarationContext[] structureDeclaration() {
			return GetRuleContexts<StructureDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructureDeclarationContext structureDeclaration(int i) {
			return GetRuleContext<StructureDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportDeclarationContext[] importDeclaration() {
			return GetRuleContexts<ImportDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportDeclarationContext importDeclaration(int i) {
			return GetRuleContext<ImportDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDeclarationContext[] constantDeclaration() {
			return GetRuleContexts<ConstantDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDeclarationContext constantDeclaration(int i) {
			return GetRuleContext<ConstantDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GroupDeclarationContext[] groupDeclaration() {
			return GetRuleContexts<GroupDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GroupDeclarationContext groupDeclaration(int i) {
			return GetRuleContext<GroupDeclarationContext>(i);
		}
		public StructureMapContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structureMap; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.EnterStructureMap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.ExitStructureMap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmlMappingVisitor<TResult> typedVisitor = visitor as IFmlMappingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStructureMap(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StructureMapContext structureMap() {
		StructureMapContext _localctx = new StructureMapContext(Context, State);
		EnterRule(_localctx, 0, RULE_structureMap);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 102;
					metadataDeclaration();
					}
					} 
				}
				State = 107;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 111;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 108;
					conceptMapDeclaration();
					}
					} 
				}
				State = 113;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 115;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__7) {
				{
				State = 114;
				mapDeclaration();
				}
			}

			State = 120;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 117;
					structureDeclaration();
					}
					} 
				}
				State = 122;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			State = 126;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 123;
					importDeclaration();
					}
					} 
				}
				State = 128;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			State = 132;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 129;
					constantDeclaration();
					}
					} 
				}
				State = 134;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			State = 136;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 135;
				groupDeclaration();
				}
				}
				State = 138;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__17 );
			State = 140;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConceptMapDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UrlContext url() {
			return GetRuleContext<UrlContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapPrefixContext[] conceptMapPrefix() {
			return GetRuleContexts<ConceptMapPrefixContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapPrefixContext conceptMapPrefix(int i) {
			return GetRuleContext<ConceptMapPrefixContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapCodeMapContext[] conceptMapCodeMap() {
			return GetRuleContexts<ConceptMapCodeMapContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapCodeMapContext conceptMapCodeMap(int i) {
			return GetRuleContext<ConceptMapCodeMapContext>(i);
		}
		public ConceptMapDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conceptMapDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.EnterConceptMapDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.ExitConceptMapDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmlMappingVisitor<TResult> typedVisitor = visitor as IFmlMappingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConceptMapDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConceptMapDeclarationContext conceptMapDeclaration() {
		ConceptMapDeclarationContext _localctx = new ConceptMapDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_conceptMapDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142;
			Match(T__0);
			State = 143;
			url();
			State = 144;
			Match(T__1);
			State = 146;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 145;
				conceptMapPrefix();
				}
				}
				State = 148;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__3 );
			State = 151;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 150;
				conceptMapCodeMap();
				}
				}
				State = 153;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==ID );
			State = 155;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConceptMapPrefixContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(FmlMappingParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UrlContext url() {
			return GetRuleContext<UrlContext>(0);
		}
		public ConceptMapPrefixContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conceptMapPrefix; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.EnterConceptMapPrefix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.ExitConceptMapPrefix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmlMappingVisitor<TResult> typedVisitor = visitor as IFmlMappingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConceptMapPrefix(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConceptMapPrefixContext conceptMapPrefix() {
		ConceptMapPrefixContext _localctx = new ConceptMapPrefixContext(Context, State);
		EnterRule(_localctx, 4, RULE_conceptMapPrefix);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 157;
			Match(T__3);
			State = 158;
			Match(ID);
			State = 159;
			Match(T__4);
			State = 160;
			url();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
